--- a/VJ.html
+++ b/VJ.html
@@ -2,3 +2,4 @@
 <h1>VJ</h1>
 </center>
 <hr>
+<p>Joseph Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay, is an Indian actor and playback singer who works in Tamil cinema. In a career spanning in just over 3 decades, Vijay has acted in over 69</p>
